# trait-object-test

./: Cargo.toml  typetag.example.rs
src/: dynamic.rs  erased.rs  factory.bck.rs  factory.rs  global.rs  lazy.rs  main.rs  once.rs  registry.rs  typetagger.rs
src/tag/: convenience.rs  factory.rs  mod.rs  registry.rs  tagged.rs
