[package]
name = "test-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
downcast-rs = "1.2.0"
erased-serde = "0.3.31"
lazy_static = "1.4.0"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
typetag = "0.2.13"
